--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">bignumber</string>
     <string name="choose_bigger">choose the bigger</string>
     <string name="choose_smaller">choose the smaller</string>
+    <string name="play">Play</string>
+    <string name="pitch">Just pick the bigger number.</string>
 </resources>
