--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="high_score_reminder">Highest score was:%1$d</string>
     <string name="pitch">Just pick the bigger number.</string>
     <string name="about">About</string>
+    <string name="beta">beta</string>
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="about_this_game">BigNumber [currently in beta] is designed to get our brains working. The rule of the game is simple; always pick the bigger number.\nThis game is being designed and developed by Onur; an independent app developer. For more information about Onur\'s works please visit:</string>
     <string name="onur_web_hyper_link"><a href="http://onur.es/">onur.es</a></string>
