--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,11 @@
     <string name="onboarding_title">Quick info on decimal numbers</string>
     <string name="onboarding_text">Our decimal numbers are shown like this:</string>
     <string name="onboarding_decimal">22,3</string>
+    <string name="onboarding_decimal1">22</string>
+    <string name="onboarding_decimal2">22,1</string>
+    <string name="onboarding_decimal3">22,2</string>
+    <string name="onboarding_decimal4">22,3</string>
+
     <string name="onboarding_text2">This means that 22,3 is 3 step greater than 22 and 7 step smaller than 23.</string>
     <string name="onboarding_done">Alright!</string>
 
