--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="choose_smaller">choose the smaller</string>
     <string name="play">Play</string>
     <string name="play_again">Play Again!</string>
+    <string name="get_started">Get Started</string>
     <string name="score">Score:%1$s</string>
     <string name="new_high_score">A new High Score:%1$d!</string>
     <string name="your_score">Your Score This Time:%1$d</string>
